--- a/notebooks/kpca.ipynb
+++ b/notebooks/kpca.ipynb
@@ -5,7 +5,6 @@
    "execution_count": 13,
    "outputs": [],
    "source": [
-    "\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
@@ -38,7 +37,6 @@
     }
    ],
    "source": [
-    "\n",
     "dt_heart = pd.read_csv('../data/heart.csv')\n",
     "dt_heart.head()"
    ],
@@ -157,9 +155,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "name": "pycharm-dab748b1",
    "language": "python",
-   "name": "python3"
+   "display_name": "PyCharm (curso-scikit-learn)"
   },
   "language_info": {
    "codemirror_mode": {
