--- a/notebooks/pca.ipynb
+++ b/notebooks/pca.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -21,14 +21,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "outputs": [
     {
      "data": {
       "text/plain": "   age  sex  cp  trestbps  chol  fbs  restecg  thalach  exang  oldpeak  slope  \\\n0   52    1   0       125   212    0        1      168      0      1.0      2   \n1   53    1   0       140   203    1        0      155      1      3.1      0   \n2   70    1   0       145   174    0        1      125      1      2.6      0   \n3   61    1   0       148   203    0        1      161      0      0.0      2   \n4   62    0   0       138   294    1        1      106      0      1.9      1   \n\n   ca  thal  target  \n0   2     3       0  \n1   0     3       0  \n2   0     3       0  \n3   1     3       0  \n4   3     2       0  ",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>age</th>\n      <th>sex</th>\n      <th>cp</th>\n      <th>trestbps</th>\n      <th>chol</th>\n      <th>fbs</th>\n      <th>restecg</th>\n      <th>thalach</th>\n      <th>exang</th>\n      <th>oldpeak</th>\n      <th>slope</th>\n      <th>ca</th>\n      <th>thal</th>\n      <th>target</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>52</td>\n      <td>1</td>\n      <td>0</td>\n      <td>125</td>\n      <td>212</td>\n      <td>0</td>\n      <td>1</td>\n      <td>168</td>\n      <td>0</td>\n      <td>1.0</td>\n      <td>2</td>\n      <td>2</td>\n      <td>3</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>53</td>\n      <td>1</td>\n      <td>0</td>\n      <td>140</td>\n      <td>203</td>\n      <td>1</td>\n      <td>0</td>\n      <td>155</td>\n      <td>1</td>\n      <td>3.1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>3</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>70</td>\n      <td>1</td>\n      <td>0</td>\n      <td>145</td>\n      <td>174</td>\n      <td>0</td>\n      <td>1</td>\n      <td>125</td>\n      <td>1</td>\n      <td>2.6</td>\n      <td>0</td>\n      <td>0</td>\n      <td>3</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>61</td>\n      <td>1</td>\n      <td>0</td>\n      <td>148</td>\n      <td>203</td>\n      <td>0</td>\n      <td>1</td>\n      <td>161</td>\n      <td>0</td>\n      <td>0.0</td>\n      <td>2</td>\n      <td>1</td>\n      <td>3</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>62</td>\n      <td>0</td>\n      <td>0</td>\n      <td>138</td>\n      <td>294</td>\n      <td>1</td>\n      <td>1</td>\n      <td>106</td>\n      <td>0</td>\n      <td>1.9</td>\n      <td>1</td>\n      <td>3</td>\n      <td>2</td>\n      <td>0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 23,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "dt_features = dt_heart.drop('target', axis=1)\n",
@@ -64,13 +64,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "outputs": [
     {
      "data": {
       "text/plain": "(array([[ 1.05491812,  0.66150409,  1.02761788, -0.37763552,  1.22170358,\n         -0.41887792,  0.89125488, -0.78776   ,  1.40392824,  0.62026416,\n         -0.6241209 , -0.73197147,  1.08985168],\n        [ 1.16519768,  0.66150409, -0.91575542, -1.23437834,  0.03878424,\n         -0.41887792, -1.00404855,  0.38643389, -0.71228712, -0.40146467,\n          0.99543334,  1.20922066, -2.1340963 ],\n        [-0.26843658, -1.51170646,  1.02761788,  0.25064255, -0.96960601,\n         -0.41887792, -1.00404855,  0.86480918, -0.71228712, -0.82718502,\n         -0.6241209 , -0.73197147, -0.52212231],\n        [-0.37871614,  0.66150409,  1.02761788, -1.23437834, -1.37684054,\n         -0.41887792,  0.89125488, -1.1356693 , -0.71228712, -0.40146467,\n          0.99543334, -0.73197147, -0.52212231],\n        [ 0.28296121,  0.66150409,  0.05593123,  1.27873394, -0.27148968,\n         -0.41887792, -1.00404855,  0.64736587, -0.71228712, -0.91232909,\n          0.99543334,  0.23862459, -0.52212231]]),\n 586    0\n 98     0\n 304    1\n 369    1\n 497    0\n Name: target, dtype: int64)"
      },
-     "execution_count": 25,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,13 +88,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "outputs": [
     {
      "data": {
       "text/plain": "((768, 13), (768,))"
      },
-     "execution_count": 26,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,13 +111,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "outputs": [
     {
      "data": {
-      "text/plain": "[<matplotlib.lines.Line2D at 0x2683c400>]"
+      "text/plain": "[<matplotlib.lines.Line2D at 0x7ffb58239280>]"
      },
-     "execution_count": 27,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -152,13 +152,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "outputs": [
     {
      "data": {
       "text/plain": "0.8287937743190662"
      },
-     "execution_count": 28,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,13 +182,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "outputs": [
     {
      "data": {
       "text/plain": "0.8404669260700389"
      },
-     "execution_count": 29,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "outputs": [],
    "source": [],
    "metadata": {
@@ -223,9 +223,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "name": "pycharm-dab748b1",
    "language": "python",
-   "name": "python3"
+   "display_name": "PyCharm (curso-scikit-learn)"
   },
   "language_info": {
    "codemirror_mode": {
